--- a/.github/workflows/cron.base-mainnet.yml
+++ b/.github/workflows/cron.base-mainnet.yml
@@ -5,9 +5,9 @@ on:
   push:
 env:
   CHAIN_ID: 8453
-  MIN_PROFIT_THRESHOLD_USD: 0.5
-  REWARD_RECIPIENT: ''
-  ERROR_STATE_MAX_GAS_COST_THRESHOLD_USD: 1
+  MIN_PROFIT_THRESHOLD_USD: 0.1
+  REWARD_RECIPIENT: '0xBA5Eebe0C5075b26C088001dc722D216ca567DE8'
+  ERROR_STATE_MAX_GAS_COST_THRESHOLD_USD: .1
   JSON_RPC_URL: ${{ secrets.BASE_MAINNET_JSON_RPC_URL }}
   COVALENT_API_KEY: ${{ secrets.COVALENT_API_KEY }}
   CUSTOM_RELAYER_PRIVATE_KEY: ${{ secrets.CUSTOM_RELAYER_PRIVATE_KEY }}
